# aibox-dist

./: CMakeLists.txt  LICENSE  README  README.md  build.sh
config/: cam_setup.json  crop.json  draw_reid.json  ped_pp.json  refinedet.json  reid.json
cros_mt_reid/: CMakeLists.txt  cmake.sh
cros_mt_reid/cmake/: vart-config-version.cmake  vart-config.cmake
cros_mt_reid/src/: CMakeLists.txt  calibration.cpp  calibration.hpp  debug.cpp  debug.hpp  filter_linear.cpp  filter_linear.hpp  hungarian.cpp  mtmc_reid.cpp  mtmc_reid.hpp  parse_json_config.cpp  parse_json_config.hpp  structure.cpp  structure.hpp  trajectory.cpp  trajectory.hpp
cros_mt_reid/test/: CMakeLists.txt  test_merge.cpp  test_merge_accuracy.cpp
notebook/: aibox-dist.ipynb
script/: aibox-dist-cam  aibox-dist-install.py  aibox-dist-monitor
src/: aibox_dist_crop.cpp  aibox_dist_drawreid.cpp  aibox_dist_pedpp.c  aibox_dist_reid.cpp  cam.cpp  cross_track.cpp  cross_track.hpp  dataSaveLoad.cpp  dataSaveLoad.hpp  gstaibox_dist_attach.cpp  gstaibox_dist_attach.hpp  gstaibox_dist_parse.cpp  gstaibox_dist_parse.hpp  gstaibox_dist_sum.cpp  gstaibox_dist_sum.hpp  monitor.cpp
